--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "main": "index.html",
     "chromium-args": "--force-color-profile=srgb --disable-devtools",
     "window": {
-        "title": "資源回收歷險記",
+        "title": "回收小鎮探索記",
         "width": 816,
         "height": 624,
         "position": "center",
